--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lodash": "^4.17.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-dropzone": "^3.13.3",
     "react-modal": "^2.2.2",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.2",
@@ -36,6 +37,7 @@
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
+    "superagent": "^3.5.2",
     "webpack": "^3.3.0"
   },
   "engines": {
