--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
     "redux": "^3.7.2",
-    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "superagent": "^3.5.2",
     "webpack": "^3.3.0"
+  },
+  "devDependencies": {
+    "redux-logger": "^3.0.6"
   },
   "engines": {
     "node": "6.10.1",
