--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-dropzone": "^3.13.3",
+    "react-html-parser": "^2.0.0",
     "react-modal": "^2.2.2",
+    "react-quill": "^1.1.0",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
